--- a/templates/index.html
+++ b/templates/index.html
@@ -598,7 +598,7 @@ document.addEventListener('DOMContentLoaded', function() {
         <ul>        
             <li><a href="{{ url_for('index') }}">Home</a></li>        
             <li><a href="{{ url_for('list_indexes') }}"> Atlas Search Indexes</a></li>        
-            <li><a href="{{ url_for('manage_classifiers') }}">LLM Classifiers</a></li>    
+            <li><a href="{{ url_for('manage_evaluators') }}">Custom Evaluators</a></li>    
         </ul>        
     </nav>        
   
