--- a/templates/manage_evaluators.html
+++ b/templates/manage_evaluators.html
@@ -200,11 +200,11 @@
   
     <!-- Navigation Menu -->    
     <nav>    
-        <ul>    
-            <li><a href="{{ url_for('index') }}">Home</a></li>    
-            <li><a href="{{ url_for('manage_evaluators') }}">Manage Evaluators</a></li>    
-            <!-- Add more navigation items if needed -->    
-        </ul>    
+        <ul>        
+            <li><a href="{{ url_for('index') }}">Home</a></li>        
+            <li><a href="{{ url_for('list_indexes') }}"> Atlas Search Indexes</a></li>        
+            <li><a href="{{ url_for('manage_evaluators') }}">Custom Evaluators</a></li>    
+        </ul>   
     </nav>    
   
     <main>    
