idx_meta load/save dataset

--- a/templates/list_indexes.html
+++ b/templates/list_indexes.html
@@ -228,8 +228,9 @@
     <nav>  
         <ul>  
             <li><a href="{{ url_for('index') }}">Home</a></li>  
+            <li><a href="{{ url_for('manage_evaluators') }}">Manage Evaluators</a></li>
             <li><a href="{{ url_for('list_indexes') }}">Manage Atlas Search Indexes</a></li>  
-            <!-- Add more navigation items if needed -->  
+            
         </ul>  
     </nav>  
   
