--- a/templates/manage_evaluators.html
+++ b/templates/manage_evaluators.html
@@ -203,7 +203,7 @@
         <ul>        
             <li><a href="{{ url_for('index') }}">Home</a></li>        
             <li><a href="{{ url_for('list_indexes') }}"> Atlas Search Indexes</a></li>        
-            <li><a href="{{ url_for('manage_evaluators') }}">Custom Evaluators</a></li>    
+            <li><a href="{{ url_for('manage_evaluators') }}">Manage Evaluators</a></li>    
         </ul>   
     </nav>    
   
